objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Special_Instructions__c</fullName>
        <inlineHelpText>Max 50 chars on Highlight Panel</inlineHelpText>
        <label>Special Instructions 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active_For_Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Depot - Active For Collections</description>
        <label>Active For Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_For_Deliveries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Depot - Active For Deliveries</description>
        <label>Active For Deliveries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned Agent will be used for Case assignments. Works only for Major Accounts.</description>
        <inlineHelpText>This field is only used for major accounts</inlineHelpText>
        <label>Assigned Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_for_booking_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if an account requests a special permission to make bookings</description>
        <inlineHelpText>If checked, contacts of this account will requiere a special permission to be able to make bookings</inlineHelpText>
        <label>Authorization for booking required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_to_see_rates_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if an account requests a special permission to see rates</description>
        <inlineHelpText>If checked, contacts of this account will requiere a special permission to be able to see rates</inlineHelpText>
        <label>Authorization to see rates required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Case_Creation_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this if you need the Account to override the standard rules for turning Auto Case Creation on and off for Major and Non Major Accounts</description>
        <inlineHelpText>Tick this if you need the Account to override the standard rules for turning Auto Case Creation on and off for Major and Non Major Accounts</inlineHelpText>
        <label>Auto Case Creation Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Case_Creation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Checked then cases are auto created for this account if any associated bookings are &apos;Rejected to Customer Services&apos;. 

The box is automatically Unchecked when an Account becomes a Major Account and vice versa.</description>
        <inlineHelpText>If Checked then cases are auto created for this account if any associated bookings are &apos;Rejected to Customer Services&apos;. 

The box is automatically Unchecked when an Account becomes a Major Account and vice versa.</inlineHelpText>
        <label>Auto Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Owner__c</fullName>
        <label>CS Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Aarti Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abbey Stevens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Pankhurst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Trickett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Davies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alice Davies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Mclafferty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Rampton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Fern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Sherwin-Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Sherwin-Jones/Lauren Swallow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Taylor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Blake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angela Beadman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Wright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Wright/Sam Jinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Wilton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthony Wyles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arshid Mawdsley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta Storey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beata Buczynska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becky Smallwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Franklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billy Bellion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobby Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosch Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callum Colclough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callum Herbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carla Kettle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collection_Queue__c</fullName>
        <description>Developer name of the queue used to handle collection cases.</description>
        <inlineHelpText>Queue Name should follow this format e.g:
Atherstone_MAD_1
Lount_MAD_1
Manchester_MAD_1

If you do not follow this format cases for this account cannot be assigned automatically.</inlineHelpText>
        <label>Collection Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the booking agent must request a customer reference from the customer when they make a booking.</description>
        <inlineHelpText>Indicates that the booking agent must request a customer reference from the customer when they make a booking.</inlineHelpText>
        <label>Customer Reference Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dangerous_Goods__c</fullName>
        <description>does a customer ship dangerous goods?</description>
        <label>Ships Dangerous Goods</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Addresses__c</fullName>
        <label>Default Addresses</label>
        <summaryFilterItems>
            <field>Account_Address__c.Default__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Address__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivery_Queue__c</fullName>
        <description>Developer name of the queue used to handle delivery cases.</description>
        <inlineHelpText>Queue Name should follow this format e.g:
Atherstone_MAD_1
Lount_MAD_1
Manchester_MAD_1

If you do not follow this format cases for this account cannot be assigned automatically.</inlineHelpText>
        <label>Origin Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depot_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Depot Number</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>E_Invoicing_Indicator__c</fullName>
        <label>E Invoicing Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eInvoicing (Paper Invoice and PDF Statement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eInvoicing (PDF Invoice and PDF Statement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eInvoicing (Paper Invoice and Paper Statement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eInvoicing (PDF Invoice and Paper Statement)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date the account began trading with TNT.</description>
        <inlineHelpText>Date the account began trading with TNT.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Trade_Date__c</fullName>
        <label>First Trade Date</label>
        <summarizedField>Account_LOB__c.First_Trade_Date__c</summarizedField>
        <summaryForeignKey>Account_LOB__c.Account__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>International_Account__c</fullName>
        <description>Checks the first 3 digits of the Account Number and if it equals 203 then the field is set to true. (All International accounts should begin with 203)</description>
        <formula>CONTAINS(LEFT(Account_Number__c, 3), &quot;203&quot;)</formula>
        <inlineHelpText>If the account number starts with 203 then the account is an International account.  UK Domestic CS should not raise cases for these accounts. Enquiries should be transferred to International CS.</inlineHelpText>
        <label>International Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Collection_Date__c</fullName>
        <description>Date and time of last successful collection for the line of business linked to the account.</description>
        <label>Last Successful Collection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Major_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This customer is a Major Account for TNT</description>
        <label>Major Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Account__c</fullName>
        <description>Checks if the CS Owner field contains the same name as the currently logged in user.  If it does then the box is checked and can be used as filter criteria in Reports and List Views. Will work with Job Share CS Owners as long as the whole name is used e.g. Joe Bloggs/Tim Stevens</description>
        <formula>IF(CONTAINS(TEXT(CS_Owner__c), $User.FirstName + &quot; &quot; + $User.LastName), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NORM_Cut_off_Time__c</fullName>
        <label>Normal Service Cut-off Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NORM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Normal Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp;  Name &amp;
                   &quot;&amp;type=Account&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, the Account is ON STOP. Only a Stubbins user is able to edit the status of an Account which is ON STOP.</description>
        <inlineHelpText>When this field is checked, the Account is ON STOP. Only a Stubbins user is able to edit the status of an Account which is ON STOP.</inlineHelpText>
        <label>On Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operational_for_Bookings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used to mark any non operational depot&apos;s that should not be available for selection on the Booking &apos;Collection Depot&apos; field.  This field will then be used in the Lookup Filter Criteria along with the Depot Record Type</description>
        <inlineHelpText>Depots that are not operational for Bookings should be left unchecked.</inlineHelpText>
        <label>Operational for Bookings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POD_Image_PIN__c</fullName>
        <description>PIN used by the account to access enhanced proof of delivery information on the website.</description>
        <inlineHelpText>PIN used by the account to access enhanced proof of delivery information on the website.</inlineHelpText>
        <label>POD Image PIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREM_Cut_off_Time__c</fullName>
        <label>Premium Service Cut-off Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PREM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regular_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a Regular Customer - Approved for collection ready times after 2pm. (Depot cut off times must take presidence)</inlineHelpText>
        <label>Regular Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Stubbins_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Stubbins Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAT_Cut_off_Time__c</fullName>
        <label>Saturday Service Cut-off Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_2__c</fullName>
        <inlineHelpText>Max 50 chars on Highlight Panel</inlineHelpText>
        <label>Special Instructions 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_3__c</fullName>
        <inlineHelpText>Max 50 chars on Highlight Panel</inlineHelpText>
        <label>Special Instructions 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_4__c</fullName>
        <inlineHelpText>Max 50 chars on Highlight Panel</inlineHelpText>
        <label>Special Instructions 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Exist__c</fullName>
        <description>Checks to see if any special instructions have been recorded against the Account</description>
        <formula>NOT( 
AND
(ISBLANK(Account_Special_Instructions__c) ,ISBLANK( Special_Instructions_2__c ), ISBLANK(Special_Instructions_3__c ), ISBLANK(Special_Instructions_4__c ), ISBLANK(Special_Instructions_5__c ), ISBLANK(Special_Instructions_6__c )   
)
)</formula>
        <label>Special Instructions Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stubbins_Temporary_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to allow activities with an account that is on stop for a few hours</description>
        <label>Stubbins Temporary Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trading_Status__c</fullName>
        <label>Trading Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available to Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Deletion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Major_Account__c</columns>
        <columns>Collection_Queue__c</columns>
        <columns>Delivery_Queue__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllMAAccounts</fullName>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CS_Owner__c</columns>
        <columns>Auto_Case_Creation__c</columns>
        <columns>Collection_Queue__c</columns>
        <columns>Delivery_Queue__c</columns>
        <columns>Major_Account__c</columns>
        <columns>On_Stop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Major_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Major Accounts</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Depots</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Depot_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Collection_Queue__c</columns>
        <columns>Delivery_Queue__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>Operational_for_Bookings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Depot</value>
        </filters>
        <label>Depots</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CS_Owner__c</columns>
        <columns>Auto_Case_Creation__c</columns>
        <columns>Collection_Queue__c</columns>
        <columns>Delivery_Queue__c</columns>
        <columns>Major_Account__c</columns>
        <columns>On_Stop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>On_Stop</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Trading_Status__c</columns>
        <columns>CS_Owner__c</columns>
        <columns>Collection_Queue__c</columns>
        <columns>Delivery_Queue__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>On_Stop__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>On Stop</label>
    </listViews>
    <listViews>
        <fullName>terrys_view</fullName>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Delivery_Queue__c</columns>
        <columns>Collection_Queue__c</columns>
        <columns>CS_Owner__c</columns>
        <columns>Major_Account__c</columns>
        <columns>Account_Special_Instructions__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Auto_Case_Creation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <filters>
            <field>CS_Owner__c</field>
            <operation>equals</operation>
            <value>Gemma Lamb / Michelle Smith</value>
        </filters>
        <label>terrys view</label>
        <sharedTo>
            <group>Development_Managers</group>
            <role>UKIT</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Account for TNT Clients</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depot</fullName>
        <active>true</active>
        <description>Account for TNT Depots</description>
        <label>Depot</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>